UXPROD-5562: Fix sonar warnings